# treeland-demo-client

./: CMakeLists.txt  README.md
src/: main.c
test-subsurface/: CMakeLists.txt  README.md  main.c
test-wine-window/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
test-wine-window-management/: CMakeLists.txt  README.md
test-wine-window-management/src/: main.c
test-wine-window/protocols/: treeland-wine-window-management-unstable-v1.xml  treeland-wine-window-state-unstable-v1.xml
test-wine-window/src/: main.c
test-xdg-dialog/: CMakeLists.txt  README.md  run.sh  test.sh
test-xdg-dialog/src/: main.c
test-xdg-foreign/: CMakeLists.txt
test-xdg-foreign/protocols/: xdg-foreign-unstable-v2.xml
